Bug 311174 - Journal fails to save under certain conditions
Summary: Journal fails to save under certain conditions
Status: RESOLVED FIXED
Alias: None
Product: Rocs
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Compiled Sources Linux
: NOR critical
Target Milestone: ---
Assignee: Andreas Cord-Landwehr
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-05 05:24 UTC by Chris Wong
Modified: 2012-12-06 08:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Wong 2012-12-05 05:24:11 UTC
If I choose File>Save before closing Rocs, all data is saved properly. However, when I try to save while it is closing, the journal is not written.

Reproducible: Always

Steps to Reproduce:
1. Open Rocs.
2. Write something in the journal.
3. Try to close Rocs. A confirmation dialog should appear.
4. Click "Yes", and save the project somewhere.
5. Open the location in your file manager. Notice that the journal.html file does not exist. Recoil in horror (optional).
Actual Results:  
The journal.html file was not written.

Expected Results:  
The journal.html file should have appeared, containing the text that was written.

I'm running commit 0ec062a, synced Dec 05.

It probably isn't related, but I removed the CMake version check so it built under 2.8.7.
Comment 1 Andreas Cord-Landwehr 2012-12-05 06:29:57 UTC
Thanks for reporting this!

More Details: Bug consists of two problems:
* Saving of uncompressed projects will lead to unsaved journal file. (compressed projects work)
* "Modified" flag missing at project after journal edit: no save-dialog is show when closing.
Comment 2 Andreas Cord-Landwehr 2012-12-06 08:25:39 UTC
Git commit 52957edb3340229001fe590f027af1630910ccf8 by Andreas Cord-Landwehr.
Committed on 06/12/2012 at 09:22.
Pushed by cordlandwehr into branch 'master'.

Fix journal file data loss for new projects.

This change ensures that journal files for new created projects are
saved. The problem was located in the missing associated project
for the journal file.

M  +7    -2    App/Interface/JournalEditorWidget.cpp
M  +4    -2    App/Interface/MainWindow.cpp

http://commits.kde.org/rocs/52957edb3340229001fe590f027af1630910ccf8