Fix journal file data loss for new projects.

This change ensures that journal files for new created projects are
saved. The problem was located in the missing associated project
for the journal file.

BUG: 311174